# Loraine

./: CMakeLists.txt  CMakePresets.json
include/: config.hpp  controller.hpp  http_server.hpp  i2c.hpp  utility.hpp
source/: config.cpp  controller.cpp  http_server.cpp  i2c.cpp  main.cpp  utility.cpp
